# qbe

./: .env.sample  LICENSE  README.md  build.py  custom_types.py  evaluation.py  factories.py  keyword_spotting.py  main.py  model.py  pyproject.toml  self_search.py
aqbe/: audio_loader.py  data.py  encoder.py  eval.py  index.py  types.py  utils.py
aqbe/tests/: test_eval.py  test_utils.py
