[tool.poetry]
name = "qbe"
version = "0.1.0"
description = ""
authors = ["stegben <stegben.benjamin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.4.0"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
