[tool.poetry]
name = "qbe"
version = "0.1.0"
description = ""
authors = ["stegben <stegben.benjamin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.4.0"
python-dotenv = "^0.12.0"
torchaudio = "^0.4.0"
numpy = "^1.18.1"
fastdtw = "^0.3.4"
segdtw = "^0.1.0"
nptyping = "^1.0.1"
hnswlib = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pylint = "^2.4.4"
tqdm = "^4.43.0"
ipdb = "^0.13.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
